# tanks

./: README.md  asset_manager.py  camera.py  constants.py  main.py  pyproject.toml  tank.py  terrain.py  terrain_maker.py  test.py  world_maker.py
assets/: __init__.py  asset_manager.py
terrain/: meadows.json
world/: __init__.py  bullet.py  effect.py  entity.py  item.py  object.py  tile.py  world.py  world_entity.py
world/effects/: __init__.py  animation.py  effect.py  explosion.py  explosion_effect.py  track_effect.py
world/tanks/: __init__.py  basic_tank.py  blitz_tank.py  bullet.py  missile.py  rotation.py  seeking_tank.py  tank.py  turret.py
world/tanks/turrets/: __init__.py  barrel_turret.py  basic_turret.py  blitz_turret.py  seeking_turret.py  turret.py  wide_turret.py
worlds/: dunes.json  meadows.json
